deploy/k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keywars
  labels:
    app.kubernetes.io/name: keywars
